# MuseScore

./: .travis.yml
share/: CMakeLists.txt
src/converter/internal/compat/: backendapi.h
src/framework/midi/internal/platform/osx/: coremidiinport.cpp  coremidioutport.cpp
src/framework/uicomponents/view/: dialogview.cpp
src/importexport/musicxml/: CMakeLists.txt
src/importexport/musicxml/internal/musicxml/: musicxmlvalidation.cpp  musicxmlvalidation.h
src/importexport/musicxml/tests/: CMakeLists.txt
src/notation/: inotationselection.h
src/notation/internal/: notationselection.cpp  notationselection.h
src/playback/internal/: playbackcontroller.cpp  playbackcontroller.h
